@@ -2,7 +2,8 @@ From release 0.3.1:
  - Bump version number to 0.3.2 (dev while under development)
  - Reinstate weather systems (spinbox to control number).
  - Command line options using boost::program_options
- - --info option
+ - --info option 
+ - Save to texture (WIP)
 
 From release 0.3.0:
  - Bump version number to 0.3.1dev
